--- a/pytest.ini
+++ b/pytest.ini
@@ -3,7 +3,11 @@ DJANGO_SETTINGS_MODULE = project.settings
 python_files = text.py tests.py test_*.py tests_*.py *_test.py *_tests.py
 addopts =
   --doctest-modules
+  -p no:warnings 
   #--strict-makers
 makers =
   slow: Run tests that are slow
   fast: Run fast tests
+
+#[pytest]
+#addopts = -p no:warnings
