--- a/pytest.ini
+++ b/pytest.ini
@@ -8,6 +8,7 @@ addopts =
 makers =
   slow: Run tests that are slow
   fast: Run fast tests
+  functional_test: Run tests that are selenium based
 
 #[pytest]
 #addopts = -p no:warnings
