--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,7 +16,7 @@
   "python.formatting.autopep8Args": ["--indent-size=4"],
   "python.defaultInterpreterPath": "venv/bin/python",
   "[python]": {
-    "editor.defaultFormatter": "ms-python.python", // ms-python.python
+    "editor.defaultFormatter": "ms-python.autopep8", // ms-python.python
     "editor.tabSize": 4,
     "editor.insertSpaces": true,
     "editor.formatOnSave": true,
@@ -60,5 +60,6 @@
     "javascript": "javascriptreact",
     "typescript": "typescriptreact"
   },
-  "python.analysis.typeCheckingMode": "basic"
+  "python.analysis.typeCheckingMode": "basic",
+  "python.formatting.provider": "none"
 }
