--- a/.env-example
+++ b/.env-example
@@ -16,4 +16,4 @@ DATABASE_NAME = "./db.sqlite3"
 DATABASE_USER = "usuario"
 DATABASE_PASSWORD = "senha"
 DATABASE_HOST = "127.0.0.1"
-DATABASE_PORT = "5432"
+DATABASE_PORT = "5432"  # type: ignore
