--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ pyflakes==3.0.1
 PySocks==1.7.1
 pytest==7.2.2
 pytest-django==4.5.2
+pytest-dotenv==0.5.2
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 selenium==4.8.3
