--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ certifi==2022.12.7
 coverage==7.2.1
 Django==4.1.6
 django-debug-toolbar==4.0.0
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
 exceptiongroup==1.1.0
 Faker==17.0.0
 flake8==6.0.0
@@ -22,12 +24,14 @@ Pillow==9.4.0
 pluggy==1.0.0
 pycodestyle==2.10.0
 pyflakes==3.0.1
+PyJWT==2.7.0
 PySocks==1.7.1
 pytest==7.2.2
 pytest-django==4.5.2
 pytest-dotenv==0.5.2
 python-dateutil==2.8.2
 python-dotenv==1.0.0
+pytz==2023.3
 selenium==4.8.3
 six==1.16.0
 sniffio==1.3.0
