--- a/.env-example
+++ b/.env-example
@@ -25,5 +25,6 @@ DATABASE_HOST = "127.0.0.1"
 DATABASE_PORT = "5432"  # type: ignore
 
 # Comma separated values
-# ALLOWED_HOSTS = '127.0.0.1, localhost'
-# CSRF_TRUSTED_ORIGINS = ''
+# LLOWED_HOSTS = '127.0.0.1, localhost,'
+# CSRF_TRUSTED_ORIGINS = 'https://localhost,'
+# CORS_ALLOWED_ORIGINS = 'http://127.0.0.1:5500,'
