--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ autopep8==2.0.2
 certifi==2022.12.7
 coverage==7.2.1
 Django==4.1.6
+django-cors-headers==4.0.0
 django-debug-toolbar==4.0.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
